--- a/src/styles.scss
+++ b/src/styles.scss
@@ -352,3 +352,10 @@ a {
         color: inherit;
     }
 }
+
+/* =========================================
+   SWEETALERT OVERRIDES
+   ========================================= */
+.swal2-container {
+    z-index: 10000 !important;
+}
