--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -54,12 +54,9 @@
             <form [formGroup]="step0Form" *ngIf="currentStep === 0" (ngSubmit)="onStep0Submit()">
                 <div class="form-group">
                     <label class="form-label">Tipo de Documento <span class="required">*</span></label>
-                    <div class="radio-inline-group"
-                        style="padding: 0.6rem 0; display: flex; gap: 1rem; flex-wrap: wrap;">
-                        <label class="radio-inline" *ngFor="let item of documentTypes">
-                            <input type="radio" [value]="item.nombre" formControlName="documentType"> {{ item.nombre }}
-                        </label>
-                    </div>
+                    <select class="form-control" formControlName="documentType" class="form-control form-select">
+                        <option *ngFor="let item of documentTypes" [value]="item.nombre">{{ item.nombre }}</option>
+                    </select>
                 </div>
 
                 <div class="form-group">
@@ -120,11 +117,9 @@
                     [disabled]="reniecValidating || reniecSuccessMessage">
                     <span *ngIf="reniecValidating" class="spinner-border spinner-border-sm me-2" role="status"
                         aria-hidden="true"></span>
-                    <span
-                        *ngIf="!reniecValidating && step0Form.get('documentType')?.value === 'DNI' && reniecServiceAvailable">Validar
+                    <span *ngIf="!reniecValidating && isDniSelected && reniecServiceAvailable">Validar
                         con RENIEC</span>
-                    <span
-                        *ngIf="!reniecValidating && (step0Form.get('documentType')?.value !== 'DNI' || !reniecServiceAvailable)">Continuar</span>
+                    <span *ngIf="!reniecValidating && (!isDniSelected || !reniecServiceAvailable)">Continuar</span>
                     <span *ngIf="reniecValidating">Validando...</span>
                 </button>
 
@@ -142,8 +137,8 @@
 
                 <div class="form-group">
                     <label class="form-label">Fecha de nacimiento <span class="required">*</span></label>
-                    <input type="date" class="form-control" formControlName="birthDate"
-                        [class.is-invalid]="isFieldInvalid(step1Form, 'birthDate')">
+                    <input type="date" class="form-control" formControlName="birthDate" [min]="birthDateMin"
+                        [max]="birthDateMax" [class.is-invalid]="isFieldInvalid(step1Form, 'birthDate')">
                     <div class="invalid-feedback" *ngIf="isFieldInvalid(step1Form, 'birthDate')">
                         <span>La fecha de nacimiento es requerida</span>
                     </div>
