se realizaron ajustes

--- a/src/app/features/admin/pages/researcher-management/researcher-management.component.html
+++ b/src/app/features/admin/pages/researcher-management/researcher-management.component.html
@@ -352,7 +352,7 @@
 
     <div class="form-grid">
         <div class="form-group">
-            <label>Nombre de Usuario</label>
+            <label>Usuario</label>
             <input type="text" [(ngModel)]="accessForm.username" disabled class="input-disabled">
         </div>
         <div class="form-group">
