--- a/src/app/features/dashboard/profile/pages/work-experience/work-experience.component.html
+++ b/src/app/features/dashboard/profile/pages/work-experience/work-experience.component.html
@@ -13,7 +13,7 @@
             <span class="plus">+</span> Asesor de tesis
         </button>
         <button class="btn-action btn-outline" (click)="openProjectModal()">
-            <span class="plus">+</span> Gestión I+D+i
+            <span class="plus">+</span> Evaluador/Formulador de proyectos
         </button>
     </app-intro-card>
 
@@ -401,7 +401,7 @@
 
         <!-- Description -->
         <div class="form-group">
-            <label class="form-label">Descripción de cursos o asignaturas (Opcional)</label>
+            <label class="form-label">Descripción Cargo</label>
             <textarea formControlName="courses" class="form-textarea" rows="3"
                 placeholder="Menciona las principales asignaturas o cátedras a tu cargo..."></textarea>
         </div>
